--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.0"
     },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
@@ -36,10 +42,6 @@
         ]
     },
     "devDependencies": {
-        "eslint": "7.6.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-prettier": "^5.0.1",
-        "eslint-plugin-react": "^7.33.2",
         "node-sass": "^9.0.0",
         "prettier": "^3.1.0",
         "sass": "^1.69.5"
